--- a/src/sass/base/_content.sass
+++ b/src/sass/base/_content.sass
@@ -1,60 +1,114 @@
 .content
     display: flex
-    gap: 0 50px
+    gap: 0 97px
     .table
-        width: 815px
+        width: 800px
+        padding-top: 98px
         span
             font-size: 15px
         h2
+            padding-top: 8px
             font-size: 30px
+            padding-bottom: 24px
+            
         p
+            letter-spacing: 0.2px
+            line-height: 1.9
+            padding-top: 52px
             font-size: 16px
             border-top: 1px solid #000
         table
-            th,td
-                border-top: none
-                border-left: none
-                border-right: none
-                vertical-align: initial
+            margin-top: 70px
+            tr
+                line-height: 2.7
+                th,td           
+                    border-top: none
+                    border-left: none
+                    border-right: none
+                    vertical-align: initial
+                    li
+                        line-height: 1.9
+                th
+                    padding-left: 28px
+                td
+                    padding-left: 40px
+                &:nth-child(4)
+                    line-height: 3
+                &:last-child
+                    td
+                        &:last-child
+                            line-height: 1.9
+                        padding-bottom: 16px
+                        letter-spacing: 0.8px                                            
         .btn
             text-align: center
+            padding-top: 37px
+            margin-left: 2px
             button
                 background: #c83535
                 color: #fff
                 line-height: 60px
-                padding: 0 90px
+                padding: 0 94px
+                letter-spacing: 2px
         .btn-list
             display: flex
             justify-content: space-between
+            padding-top: 148px
             button
+                font-size: 20px
                 color: #16316b
                 border: 2px solid #16316b
                 line-height: 77px
-                padding: 0 40px
+                padding-left: 24px
+                padding-right: 64px
                 border-radius: 50px
                 &:hover
                     cursor: pointer
                     background: #16316b
-                    color: #fff  
+                    color: #fff
+                img
+                    padding-right: 22px
+                &:nth-child(2)
+                    padding: 0 40px
+                    margin: 0 auto
+                &:nth-child(3) 
+                    padding-right: 0
+                    padding-left: 64px
+                    img
+                        padding-left: 22px
+                    
     .date
+        padding-top: 160px
         width: 300px
         .btn          
             button
+                font-size: 20px
                 width: 300px
                 height: 50px
                 background: #383838
                 color: #fff
         .btn-list
+            padding-top: 16px
             button
-                width: 300px
-                height: 50px
+                margin-bottom: 12px
+                width: 299px
+                height: 58px
                 border: 1px solid #16316b
                 color: #16316b
+
         table
-            td
-                border-top: none
-                border-left: none
-                border-right: none
-                border-bottom: 1px dotted #000
+            tr
+                td
+                    padding: 17px 0
+                    line-height: 1.7
+                    padding-left: 20px
+                    border-top: none
+                    border-left: none
+                    border-right: none
+                    border-bottom: 1px dotted #000
+                    span
+                        font-size: 14px
+                    p
+                        font-size: 18px
                     
         
