--- a/src/sass/base/_global.sass
+++ b/src/sass/base/_global.sass
@@ -1,8 +1,20 @@
+// @font-face
+//     font-family: 'Yu Gothic'
+//     src: url('YuGo-Medium-AlphaNum.eot')
+//     src: url('YuGo-Medium-AlphaNum.eot?#iefix') format('embedded-opentype'),
+//         url('YuGo-Medium-AlphaNum.woff2') format('woff2'),
+//         url('YuGo-Medium-AlphaNum.woff') format('woff'),
+//         url('YuGo-Medium-AlphaNum.ttf') format('truetype'),
+//         url('YuGo-Medium-AlphaNum.svg#YuGo-Medium-AlphaNum') format('svg')
+//     font-weight: 500
+//     font-style: normal
+//     font-display: swap
+
 .wrapper
     min-width: 1260px
     margin: 0 auto
 .container
-    width: 1200px
+    width: 1197px
     margin: 0 auto
 body
-    font-family: "Noto Sans JP", sans-serif
+    font-family: 'Yu Gothic', sans-serif
