--- a/src/sass/base/_header.sass
+++ b/src/sass/base/_header.sass
@@ -4,19 +4,26 @@
     justify-content: space-between
     align-items: center
     .logo
-        padding-left: 28px
+        padding-left: 32px
+        margin-top: -8px
     .nav
         display: flex
         align-items: center
         .menu
             display: flex
+            gap: 0 62px
+            padding-right: 62px
             .menu-item
-                padding-right: 60px
                 text-align: center
                 p
                     font-size: 12px
                 strong
                     font-size: 20px
+                &:nth-child(4)
+                    margin-top: 14px
+                &:nth-child(5)
+                    margin-top: 14px
+                    
         .email
             justify-content: center
             text-align: center
@@ -24,8 +31,9 @@
             height: 100px
             background-color: #c83535
             img
-                padding-top: 20px
+                padding-top: 26px
             p
+                padding-top: 14px
                 font-size: 14px
                 color: #fff
         .menu__toggle
@@ -43,16 +51,16 @@
                 width: 30px
                 height: 3px
                 background-color: #fff
-                transform: translateY(20px)
+                transform: translateY(37px)
             p
-                transform: translateY(40px)
+                transform: translateY(60px)
         .menu__toggle::before 
             content: ""
             width: 30px
             height: 3px
             background-color: #fff
             position: absolute
-            transform: translateY(10px)
+            transform: translateY(27px)
             transition: all 0.2s linear
         .menu__toggle::after 
             content: ""
@@ -60,6 +68,13 @@
             height: 3px
             background-color: #fff
             position: absolute
-            transform: translateY(30px)
+            transform: translateY(46px)
             transition: all 0.2s linear
+
+@media screen and (max-width: 1450.02px)
+    .header
+        .nav
+            .menu
+                gap: 0 30px
+                padding-right: 30px
 
