--- a/src/sass/base/_contact.sass
+++ b/src/sass/base/_contact.sass
@@ -84,3 +84,13 @@
                 position: absolute
                 bottom: 14px
                 right: 0
+
+@media screen and (max-width: 800.02px)
+    .contact
+        .contact__list
+            .list-btn
+                display: none
+            .list-arrow
+                display: none
+            .list-content
+                display: none
