--- a/src/sass/base/_global.sass
+++ b/src/sass/base/_global.sass
@@ -1,15 +1,4 @@
-// @font-face
-//     font-family: 'Yu Gothic'
-//     src: url('YuGo-Medium-AlphaNum.eot')
-//     src: url('YuGo-Medium-AlphaNum.eot?#iefix') format('embedded-opentype'),
-//         url('YuGo-Medium-AlphaNum.woff2') format('woff2'),
-//         url('YuGo-Medium-AlphaNum.woff') format('woff'),
-//         url('YuGo-Medium-AlphaNum.ttf') format('truetype'),
-//         url('YuGo-Medium-AlphaNum.svg#YuGo-Medium-AlphaNum') format('svg')
-//     font-weight: 500
-//     font-style: normal
-//     font-display: swap
-
+@media screen and (min-width: 800.04px)
 .wrapper
     min-width: 1260px
     margin: 0 auto
@@ -18,3 +7,8 @@
     margin: 0 auto
 body
     font-family: 'Yu Gothic', sans-serif
+@media screen and (max-width: 800.02px)
+    .wrapper
+        min-width: 800px
+    .container
+        width: 720px
