--- a/src/sass/base/_header.sass
+++ b/src/sass/base/_header.sass
@@ -78,3 +78,37 @@
                 gap: 0 30px
                 padding-right: 30px
 
+@media screen and (max-width: 800.02px)
+    .header
+        height: 120px
+        .nav
+            .menu
+                display: none
+            .email
+                width: 120px
+                height: 120px
+                p
+                    font-size: 20px
+                img
+                    width: 35%
+                    padding-top: 30px
+            .menu__toggle
+                width: 120px
+                height: 120px
+                p
+                    padding-top: 10px
+                    font-size: 20px
+                span
+                    width: 35px
+                    transform: translateY(45px)
+            .menu__toggle::before 
+                width: 35px
+                transform: translateY(34px)
+            .menu__toggle::after
+                width: 35px
+                transform: translateY(56px)
+        .logo
+            margin-top: -13px
+            img
+                width: 127%
+
