--- a/src/sass/base/_banner.sass
+++ b/src/sass/base/_banner.sass
@@ -7,3 +7,7 @@
         color: #fff
         line-height: 200px
      
+@media screen and (max-width: 800.02px)
+    .banner
+        p
+            font-size: 40px
