--- a/src/sass/base/_content.sass
+++ b/src/sass/base/_content.sass
@@ -1,3 +1,4 @@
+@media screen and (min-width: 800.04px)
 .content
     display: flex
     gap: 0 97px
@@ -111,4 +112,61 @@
                     p
                         font-size: 18px
                     
+
+@media screen and (max-width: 800.02px)
+    .content
+        .table
+            padding-top: 86px
+            span
+                font-size: 24px
+                padding-left: 11px
+            h2
+                padding-top: 16px
+                padding-left: 6px
+                letter-spacing: 2px
+                font-size: 40px
+            p
+                padding-right: 11px
+                padding-left: 11px
+                font-size: 28px
+                line-height: 1.86
+            table
+                margin-top: 102px
+                font-size: 28px
+                tr
+                    display: flex
+                    flex-direction: column
+                    th
+                        padding-top: 10px
+                        border-bottom: none
+                    td
+                        padding-left: 30px
+                        margin-top: -40px
+                    &:nth-child(3)
+                        td
+                            padding-left: 20px
+                            padding-top: 20px
+                            padding-bottom: 42px
+                            li
+                                line-height: 1.8
+                    &:nth-child(4)
+                        td
+                            margin-top: -33px
+                            line-height: 1.8
+                            padding-bottom: 41px
+                    &:nth-child(6)
+                        td
+                            margin-top: -47px
+                    &:last-child
+                        td
+                            margin-top: -31px
+                            letter-spacing: 0.3px
+                            padding-bottom: 36px
+                            &:last-child
+                                line-height: 1.8
+
+                        
+        .date
+            display: none
+
         
