--- a/src/sass/base/_note.sass
+++ b/src/sass/base/_note.sass
@@ -4,3 +4,9 @@
         padding-top: 24px
         span
             text-decoration: underline
+@media screen and (max-width: 800.02px)
+    .note
+        p
+            font-size: 20px
+            padding-left: 11px
+            padding-top: 37px
