--- a/src/sass/base/_contact.sass
+++ b/src/sass/base/_contact.sass
@@ -85,12 +85,28 @@
                 bottom: 14px
                 right: 0
 
-@media screen and (max-width: 800.02px)
++mobile
     .contact
         .contact__list
+            padding-top: 47px
+            padding-bottom: 131px
             .list-btn
                 display: none
             .list-arrow
                 display: none
             .list-content
                 display: none
+            .email
+                padding-left: 10px
+                button
+                    font-size: 30px
+                    width: 700px
+                    height: 100px
+                    img
+                        width: 12%
+                        margin-left: 0
+                a
+                    bottom: -100px
+                    right: 344px
+                    img
+                        width: 170%
