--- a/src/sass/base/_footer.sass
+++ b/src/sass/base/_footer.sass
@@ -5,3 +5,8 @@
     font-size: 12px
     line-height: 3.3
     padding-top: 5px
++mobile
+    .footer
+        font-size: 20px
+        padding-bottom: 9px
+        letter-spacing: 0.2px
