--- a/src/sass/base/_paper.sass
+++ b/src/sass/base/_paper.sass
@@ -1,4 +1,16 @@
 .paper
-    text-align: center
+    display: flex
+    justify-content: center
     font-size: 12px
     line-height: 3.7
++mobile
+    .paper
+        flex-direction: column
+        padding-top: 33px
+        font-size: 24px
+        line-height: normal
+        text-align: start
+        padding-left: 124px
+        line-height: 1.71
+        letter-spacing: 0.2px
+        padding-bottom: 28px
