--- a/src/sass/base/_content.sass
+++ b/src/sass/base/_content.sass
@@ -112,8 +112,7 @@
                     p
                         font-size: 18px
                     
-
-@media screen and (max-width: 800.02px)
++mobile
     .content
         .table
             padding-top: 86px
@@ -164,8 +163,36 @@
                             padding-bottom: 36px
                             &:last-child
                                 line-height: 1.8
-
+            .btn
+                button
+                    font-size: 30px
+                    width: 640px
+                    height: 100px    
+            .btn-list
+                flex-wrap: wrap   
+                padding: 116px 10px 0   
+                button
+                    font-size: 24px  
+                    &:first-child
+                        width: 345px
+                        img
+                            width: 26%
+                            padding-right: 49px
+                            margin-left: -27px
+                    &:last-child
+                        width: 345px
+                        position: relative
+                        top: -183px
+                        right: -355px
+                        img
+                            width: 33%
+                            padding-left: 55px
+                            margin-right: -33px
+                    &:nth-child(2)                 
+                        margin-top: 21px
+                        width: 700px
                         
+
         .date
             display: none
 
