--- a/src/sass/top.sass
+++ b/src/sass/top.sass
@@ -1,6 +1,7 @@
 @import 'base/_reset'
 @import 'base/_variable'
 @import 'base/_global'
+@import 'base/_mixins'
 @import 'base/_header'
 @import 'base/_banner'
 @import 'base/_note'
