--- a/src/sass/top.sass
+++ b/src/sass/top.sass
@@ -3,6 +3,7 @@
 @import 'base/_global'
 @import 'base/_mixins'
 @import 'base/_header'
+@import 'base/_menu'
 @import 'base/_banner'
 @import 'base/_note'
 @import 'base/_content'
