--- a/src/css/top.css
+++ b/src/css/top.css
@@ -194,7 +194,11 @@ body {
   }
 }
 .header {
+  top: 0;
+  position: fixed;
+  width: 100%;
   height: 100px;
+  background: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -206,26 +210,6 @@ body {
 .header .nav {
   display: flex;
   align-items: center;
-}
-.header .nav .menu {
-  display: flex;
-  gap: 0 62px;
-  padding-right: 62px;
-}
-.header .nav .menu .menu-item {
-  text-align: center;
-}
-.header .nav .menu .menu-item p {
-  font-size: 12px;
-}
-.header .nav .menu .menu-item strong {
-  font-size: 20px;
-}
-.header .nav .menu .menu-item:nth-child(4) {
-  margin-top: 14px;
-}
-.header .nav .menu .menu-item:nth-child(5) {
-  margin-top: 14px;
 }
 .header .nav .email {
   justify-content: center;
@@ -242,59 +226,10 @@ body {
   font-size: 14px;
   color: #fff;
 }
-.header .nav .menu__toggle {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  width: 100px;
-  height: 100px;
-  background-color: #16316b;
-}
-.header .nav .menu__toggle p {
-  font-size: 14px;
-  color: #fff;
-}
-.header .nav .menu__toggle span {
-  width: 30px;
-  height: 3px;
-  background-color: #fff;
-  transform: translateY(37px);
-}
-.header .nav .menu__toggle p {
-  transform: translateY(60px);
-}
-.header .nav .menu__toggle::before {
-  content: "";
-  width: 30px;
-  height: 3px;
-  background-color: #fff;
-  position: absolute;
-  transform: translateY(27px);
-  transition: all 0.2s linear;
-}
-.header .nav .menu__toggle::after {
-  content: "";
-  width: 30px;
-  height: 3px;
-  background-color: #fff;
-  position: absolute;
-  transform: translateY(46px);
-  transition: all 0.2s linear;
-}
 
-@media screen and (max-width: 1450.02px) {
-  .header .nav .menu {
-    gap: 0 30px;
-    padding-right: 30px;
-  }
-}
 @media screen and (max-width: 800.02px) {
   .header {
     height: 120px;
-  }
-  .header .nav .menu {
-    display: none;
   }
   .header .nav .email {
     width: 120px;
@@ -307,26 +242,6 @@ body {
     width: 35%;
     padding-top: 30px;
   }
-  .header .nav .menu__toggle {
-    width: 120px;
-    height: 120px;
-  }
-  .header .nav .menu__toggle p {
-    padding-top: 10px;
-    font-size: 20px;
-  }
-  .header .nav .menu__toggle span {
-    width: 35px;
-    transform: translateY(45px);
-  }
-  .header .nav .menu__toggle::before {
-    width: 35px;
-    transform: translateY(34px);
-  }
-  .header .nav .menu__toggle::after {
-    width: 35px;
-    transform: translateY(56px);
-  }
   .header .logo {
     margin-top: -13px;
   }
@@ -334,7 +249,160 @@ body {
     width: 127%;
   }
 }
+.menu {
+  display: flex;
+  gap: 0 62px;
+  padding-right: 62px;
+}
+.menu .menu-item {
+  text-align: center;
+}
+.menu .menu-item p {
+  font-size: 12px;
+}
+.menu .menu-item strong {
+  font-size: 20px;
+}
+.menu .menu-item:nth-child(4) {
+  margin-top: 14px;
+}
+.menu .menu-item:nth-child(5) {
+  margin-top: 14px;
+}
+
+.menu__toggle {
+  margin-top: -34px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100px;
+  height: 130px;
+  background-color: #16316b;
+}
+.menu__toggle p {
+  font-size: 14px;
+  color: #fff;
+}
+.menu__toggle span {
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  transform: translateY(16px);
+}
+.menu__toggle p {
+  transform: translateY(37px);
+}
+
+.menu__toggle::before {
+  z-index: 3;
+  content: "";
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  transform: translateY(-4px);
+  transition: all 0.2s linear;
+}
+
+.menu__toggle::after {
+  z-index: 3;
+  content: "";
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  transform: translateY(14px);
+  transition: all 0.2s linear;
+}
+
+@media screen and (max-width: 1450.02px) {
+  .menu {
+    gap: 0 30px;
+    padding-right: 30px;
+  }
+}
+@media only screen and (max-width: 800.02px) {
+  .menu {
+    display: none;
+    visibility: visible;
+    opacity: 1;
+    z-index: 2;
+    overflow-y: scroll;
+    top: 0;
+    padding-top: 100px;
+    background: #fff;
+    left: 0;
+    padding-left: 70px;
+    padding-right: 70px;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    flex-direction: column;
+    line-height: 3;
+  }
+  .menu .menu-item {
+    font-weight: 600;
+    padding: 0 70px;
+    border-bottom: 1px solid #ccc;
+  }
+  .menu .menu-item a {
+    font-size: 30px;
+    display: flex;
+  }
+  .menu .menu-item a p {
+    font-size: 30px;
+  }
+  .menu .menu-item a strong {
+    font-size: 30px;
+  }
+  .menu .menu-item:nth-child(4) {
+    margin-top: 0;
+  }
+  .menu .menu-item:nth-child(5) {
+    margin-top: 0;
+  }
+  .menu.show {
+    display: flex;
+  }
+  .menu__toggle {
+    width: 120px;
+    height: 153px;
+  }
+  .menu__toggle p {
+    padding-top: 10px;
+    font-size: 20px;
+    transform: translateY(39px);
+  }
+  .menu__toggle span {
+    width: 35px;
+    transform: translateY(23px);
+  }
+  .menu__toggle::before {
+    width: 35px;
+    transform: translateY(-9px);
+  }
+  .menu__toggle::after {
+    width: 35px;
+    transform: translateY(13px);
+  }
+  .menu__toggle.open::before {
+    transform: rotate(45deg);
+    transition: all 0.2s linear;
+    background: #000;
+  }
+  .menu__toggle.open::after {
+    transform: rotate(-45deg);
+    transition: all 0.2s linear;
+    background: #000;
+  }
+  .menu__toggle.open > span {
+    display: none;
+  }
+}
 .banner {
+  margin-top: 100px;
   text-align: center;
   background: url(../../src/img/banner/bg.png) no-repeat center;
   background-size: cover;
