--- a/src/sass/base/_banner.sass
+++ b/src/sass/base/_banner.sass
@@ -1,4 +1,5 @@
 .banner
+    margin-top: 100px
     text-align: center
     background: url(../../src/img/banner/bg.png) no-repeat center
     background-size: cover
