--- a/src/sass/base/_header.sass
+++ b/src/sass/base/_header.sass
@@ -1,5 +1,9 @@
 .header
+    top: 0
+    position: fixed
+    width: 100%
     height: 100px
+    background: #fff
     display: flex
     justify-content: space-between
     align-items: center
@@ -8,22 +12,7 @@
         margin-top: -8px
     .nav
         display: flex
-        align-items: center
-        .menu
-            display: flex
-            gap: 0 62px
-            padding-right: 62px
-            .menu-item
-                text-align: center
-                p
-                    font-size: 12px
-                strong
-                    font-size: 20px
-                &:nth-child(4)
-                    margin-top: 14px
-                &:nth-child(5)
-                    margin-top: 14px
-                    
+        align-items: center        
         .email
             justify-content: center
             text-align: center
@@ -36,54 +25,10 @@
                 padding-top: 14px
                 font-size: 14px
                 color: #fff
-        .menu__toggle
-            display: flex
-            flex-direction: column
-            align-items: center
-            position: relative
-            width: 100px
-            height: 100px
-            background-color: $mainColor
-            p
-                font-size: 14px
-                color: #fff
-            span
-                width: 30px
-                height: 3px
-                background-color: #fff
-                transform: translateY(37px)
-            p
-                transform: translateY(60px)
-        .menu__toggle::before 
-            content: ""
-            width: 30px
-            height: 3px
-            background-color: #fff
-            position: absolute
-            transform: translateY(27px)
-            transition: all 0.2s linear
-        .menu__toggle::after 
-            content: ""
-            width: 30px
-            height: 3px
-            background-color: #fff
-            position: absolute
-            transform: translateY(46px)
-            transition: all 0.2s linear
-
-@media screen and (max-width: 1450.02px)
-    .header
-        .nav
-            .menu
-                gap: 0 30px
-                padding-right: 30px
-
 @media screen and (max-width: 800.02px)
     .header
         height: 120px
         .nav
-            .menu
-                display: none
             .email
                 width: 120px
                 height: 120px
@@ -92,21 +37,6 @@
                 img
                     width: 35%
                     padding-top: 30px
-            .menu__toggle
-                width: 120px
-                height: 120px
-                p
-                    padding-top: 10px
-                    font-size: 20px
-                span
-                    width: 35px
-                    transform: translateY(45px)
-            .menu__toggle::before 
-                width: 35px
-                transform: translateY(34px)
-            .menu__toggle::after
-                width: 35px
-                transform: translateY(56px)
         .logo
             margin-top: -13px
             img
