--- a/src/css/top.css
+++ b/src/css/top.css
@@ -195,6 +195,8 @@ body {
 }
 .header {
   top: 0;
+  right: 0;
+  left: 0;
   position: fixed;
   width: 100%;
   height: 100px;
@@ -318,14 +320,16 @@ body {
 }
 
 @media screen and (max-width: 1450.02px) {
-  .menu {
+  .nav {
+    width: 1022px;
+  }
+  .nav .menu {
     gap: 0 30px;
     padding-right: 30px;
   }
 }
 @media only screen and (max-width: 800.02px) {
   .menu {
-    display: none;
     visibility: visible;
     opacity: 1;
     z-index: 2;
