--- a/src/sass/base/_menu.sass
+++ b/src/sass/base/_menu.sass
@@ -54,14 +54,13 @@
 
 
 @media screen and (max-width: 1450.02px)
-    .nav
-        width: 1022px
-        .menu
-            gap: 0 30px
-            padding-right: 30px
+    .menu
+        gap: 0 30px
+        padding-right: 30px
 
 +mobile
     .menu
+        display: none
         visibility: visible
         opacity: 1
         z-index: 2
