--- a/src/css/top.css
+++ b/src/css/top.css
@@ -199,6 +199,7 @@ body {
   left: 0;
   position: fixed;
   width: 100%;
+  min-width: 1260px;
   height: 100px;
   background: #fff;
   display: flex;
