--- a/src/sass/base/_header.sass
+++ b/src/sass/base/_header.sass
@@ -4,6 +4,7 @@
     left: 0
     position: fixed
     width: 100%
+    min-width: 1260px
     height: 100px
     background: #fff
     display: flex
