--- a/src/css/top.css
+++ b/src/css/top.css
@@ -199,7 +199,6 @@ body {
   left: 0;
   position: fixed;
   width: 100%;
-  min-width: 1260px;
   height: 100px;
   background: #fff;
   display: flex;
@@ -213,6 +212,7 @@ body {
 .header .nav {
   display: flex;
   align-items: center;
+  min-width: 1022px;
 }
 .header .nav .email {
   justify-content: center;
@@ -230,9 +230,17 @@ body {
   color: #fff;
 }
 
+@media screen and (min-width: 800.04px) {
+  .header .nav {
+    min-width: 1022px;
+  }
+}
 @media screen and (max-width: 800.02px) {
   .header {
     height: 120px;
+  }
+  .header .nav {
+    min-width: auto;
   }
   .header .nav .email {
     width: 120px;
