--- a/src/sass/base/_header.sass
+++ b/src/sass/base/_header.sass
@@ -4,7 +4,6 @@
     left: 0
     position: fixed
     width: 100%
-    min-width: 1260px
     height: 100px
     background: #fff
     display: flex
@@ -15,7 +14,8 @@
         margin-top: -8px
     .nav
         display: flex
-        align-items: center        
+        align-items: center 
+        min-width: 1022px 
         .email
             justify-content: center
             text-align: center
@@ -28,10 +28,16 @@
                 padding-top: 14px
                 font-size: 14px
                 color: #fff
+@media screen and (min-width: 800.04px)
+    .header
+        .nav
+            min-width: 1022px
+
 @media screen and (max-width: 800.02px)
     .header
         height: 120px
         .nav
+            min-width: auto
             .email
                 width: 120px
                 height: 120px
