--- a/src/css/top.css
+++ b/src/css/top.css
@@ -282,14 +282,13 @@ body {
 }
 
 .menu__toggle {
-  margin-top: -34px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   position: relative;
   width: 100px;
-  height: 130px;
+  height: 100px;
   background-color: #16316b;
 }
 .menu__toggle p {
@@ -300,10 +299,11 @@ body {
   width: 30px;
   height: 3px;
   background-color: #fff;
-  transform: translateY(16px);
+  transform: translateY(-1px);
+  z-index: 3;
 }
 .menu__toggle p {
-  transform: translateY(37px);
+  transform: translateY(22px);
 }
 
 .menu__toggle::before {
@@ -313,7 +313,7 @@ body {
   height: 3px;
   background-color: #fff;
   position: absolute;
-  transform: translateY(-4px);
+  transform: translateY(-22px);
   transition: all 0.2s linear;
 }
 
@@ -324,7 +324,7 @@ body {
   height: 3px;
   background-color: #fff;
   position: absolute;
-  transform: translateY(14px);
+  transform: translateY(-3px);
   transition: all 0.2s linear;
 }
 
@@ -379,34 +379,36 @@ body {
   }
   .menu__toggle {
     width: 120px;
-    height: 153px;
+    height: 120px;
   }
   .menu__toggle p {
     padding-top: 10px;
     font-size: 20px;
-    transform: translateY(39px);
+    transform: translateY(22px);
   }
   .menu__toggle span {
     width: 35px;
-    transform: translateY(23px);
+    transform: translateY(6px);
   }
   .menu__toggle::before {
     width: 35px;
-    transform: translateY(-9px);
+    transform: translateY(-26px);
   }
   .menu__toggle::after {
     width: 35px;
-    transform: translateY(13px);
+    transform: translateY(-4px);
   }
   .menu__toggle.open::before {
     transform: rotate(45deg);
     transition: all 0.2s linear;
     background: #000;
+    top: 45px;
   }
   .menu__toggle.open::after {
     transform: rotate(-45deg);
     transition: all 0.2s linear;
     background: #000;
+    top: 45px;
   }
   .menu__toggle.open > span {
     display: none;
@@ -425,6 +427,9 @@ body {
 }
 
 @media screen and (max-width: 800.02px) {
+  .banner {
+    margin-top: 120px;
+  }
   .banner p {
     font-size: 40px;
   }
