--- a/src/sass/base/_content.sass
+++ b/src/sass/base/_content.sass
@@ -178,6 +178,7 @@
                             padding-right: 49px
                             margin-left: -27px
                     &:last-child
+                        z-index: -1
                         width: 345px
                         position: relative
                         top: -183px
