--- a/src/sass/base/_contact.sass
+++ b/src/sass/base/_contact.sass
@@ -1,6 +1,8 @@
 .contact
     background: #f6f6f6
     margin-top: 81px
+    z-index: -2
+    position: relative
     .contact__list
         padding-top: 78px
         padding-bottom: 72px
@@ -70,6 +72,7 @@
             display: flex
             flex-direction: column
             padding-left: 6px
+            z-index: -1
             position: relative
             button
                 color: #fff
